--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">= 3.8"
 dependencies = []
-[optional-dependencies]
+[project.optional-dependencies]
 loguru = [
     'loguru',
 ]
