--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,18 @@
+[build-system]
+requires = ["uv_build>=0.8.22,<0.9.0"]
+build-backend = "uv_build"
+
+
 [project]
 name = "pawlogger"
 version = "0.1.0"
-description = "Add your description here"
+description = "logging tools"
 authors = [
     { name = "paw", email = "pawrequest@users.noreply.github.com" }
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
-dependencies = []
-[project.optional-dependencies]
-loguru = [
+dependencies = [
     'loguru',
 ]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = [
-    'loguru',
-]
-
-[tool.hatch.metadata]
-allow-direct-references = true
